# snapshottest

./: .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
examples/django_project/django_project/: settings.py  urls.py
examples/django_project/django_project/snapshots/: snap_tests.py
examples/django_project/lists/: tests.py
examples/django_project/lists/migrations/: 0001_initial.py
examples/django_project/lists/snapshots/: snap_tests.py
examples/pytest/: test_demo.py
examples/pytest/snapshots/: snap_test_demo.py
examples/pytest/snapshots/snap_test_demo/: test_multiple_files 1.txt  test_multiple_files 2.txt
examples/unittest/: test_demo.py
examples/unittest/snapshots/: snap_test_demo.py
snapshottest/: __init__.py  diff.py  django.py  error.py  file.py  formatter.py  formatters.py  generic_repr.py  module.py  nose.py  pytest.py  reporting.py  sorted_dict.py  unittest.py
tests/: test_formatter.py  test_module.py  test_snapshot_test.py  test_sorted_dict.py
tests/snapshots/: snap_test_pytest.py
