[tool.poetry]
name = "snapshottest"
version = "0.7.0+thelabnyc"
description = "Snapshot testing for pytest, unittest, Django, and Nose"
authors = ["thelab <thelabdev@thelab.co>"]
license = "MIT"
readme = "README.md"
homepage = "https://gitlab.com/thelabnyc/snapshottest"
repository = "https://gitlab.com/thelabnyc/snapshottest"
documentation = "https://gitlab.com/thelabnyc/snapshottest"
packages = [
    { include = "snapshottest" },
]

[tool.poetry.plugins]
[tool.poetry.plugins.pytest11]
snapshottest = "snapshottest.pytest"

[tool.poetry.dependencies]
python = "^3.10"
termcolor = "*"
fastdiff = ">=0.3.0,<1"
pytest = { version = ">=8.3.2", optional = true }
nose2 = { version = "*", optional = true }

[tool.poetry.extras]
pytest = ["pytest"]
nose2 = ["nose2"]

[tool.poetry.group.dev.dependencies]
tox = "^4.18.1"
pytest = ">=8.3.2"
pytest-cov = "*"
nose2 = "*"
django = ">=4.2"
flake8 = "^7.1.1"
black = "^24.8.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
